# modern_3d_engine

./: CMakeLists.txt  README.md
assets/: ui_es.frag  ui_es.vert
src/: BackendGraphics.h  CMakeLists.txt  DefaultListShader.h  Main.cpp
src/BackendGraphics/OpenGL/: Graphics.cpp
src/BackendGraphics/OpenGLES/: Graphics.cpp  Graphics.h  Object2d.h  ObjectShader.h  Shader.cpp  Shader.h
src/BackendGraphics/Vulkan/: Graphics.h
src/EventSystem/: EventSystem.cpp  EventSystem.h
src/UI/: Widget.cpp  Widget.h
